--- a/.github/workflows/django-ci.yaml
+++ b/.github/workflows/django-ci.yaml
@@ -1,30 +1,56 @@
-name: Django CI
+# name: Django CI
+
+# on:
+#   push:
+#     branches:
+#       - main  # Replace 'main' with your default branch name
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.x  # Replace '3.x' with your desired Python version
+
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install -r requirements.txt
+
+#     - name: Run tests
+#       run: |
+#         python manage.py test
+
+#     # You can add more steps here, like deploying to a server or notifying on success/failure.
+
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main  # Replace 'main' with your default branch name
+      - main  # Adjust this branch name as needed
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x  # Replace '3.x' with your desired Python version
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Build and tag the Docker image
+        run: |
+          docker build -t your-docker-username/your-image-name .
+          docker tag your-docker-username/your-image-name your-docker-username/your-image-name:latest
 
-    - name: Run tests
-      run: |
-        python manage.py test
-
-    # You can add more steps here, like deploying to a server or notifying on success/failure.
+      - name: Push the Docker image to Docker Hub
+        run: docker push mahmaduzair/django-app:latest
