--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -44,10 +44,16 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and tag the Docker image
-        run: |
-          docker build -t your-docker-username/your-image-name .
-          docker tag your-docker-username/your-image-name your-docker-username/your-image-name:latest
+      # - name: Build and tag the Docker image
+      #   run: |
+      #     docker build -t your-docker-username/your-image-name .
+      #     docker tag your-docker-username/your-image-name your-docker-username/your-image-name:latest
 
-      - name: Push the Docker image to Docker Hub
-        run: docker push mahmaduzair/django-app:latest
+      # - name: Push the Docker image to Docker Hub
+      #   run: docker push mahmaduzair/django-app:latest
+       - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: usamakenway/easy-llm-server:latest
