--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.mahmaduzair}}
-        password: ${{ secrets.xYf$L*mjK?.&p2N}}
+        password: ${{ secrets.ABCDEFGHI}}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
