--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -26,9 +26,9 @@ jobs:
         tags: mahmaduzair/django-app:latest
     
     
-    - name: Run Docker container
-      run: |
-        docker run -d -p 8000:8000 mahmaduzair/django-app:latest
+    # - name: Run Docker container
+    #   run: |
+    #     docker run -d -p 8000:8000 mahmaduzair/django-app:latest
 
 
 
